# adventofcode-hs-2020

./: .gitignore  README.md  adventofcode.cabal  fetch.sh  mkday.rb  submit.rb  travis.yml
lib/: AdventOfCode.hs
lib/AdventOfCode/: BipartiteMatching.hs  Search.hs
