cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2020
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- as of GHC 9.0.1, enabling -Wmissing-exported-signatures disables stricter -Wmissing-signatures
    -- I want -Wmissing-signatures, so I will not enable -Wmissing-exported-signatures.
    -- They may have changed this in 9.2.1, so check back later.
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsearch
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_report_repair
  import: bin, flags
  build-depends: base, adventofcode2020, containers
  main-is:       01_report_repair.hs

executable 02_password_philosophy
  import: bin, flags
  build-depends: base, adventofcode2020, aocsplit
  main-is:       02_password_philosophy.hs

executable 03_toboggan_trajectory
  import: bin, flags
  build-depends: base, adventofcode2020, containers
  main-is:       03_toboggan_trajectory.hs

executable 04_passport_processing
  import: bin, flags
  build-depends: base, adventofcode2020, aocsplit, containers
  main-is:       04_passport_processing.hs

executable 05_binary_boarding
  import: bin, flags
  build-depends: base, adventofcode2020
  main-is:       05_binary_boarding.hs

executable 06_custom_customs
  import: bin, flags
  build-depends: base, adventofcode2020, aocsplit
  main-is:       06_custom_customs.hs

executable 07_handy_haversacks
  import: bin, flags
  build-depends: base, adventofcode2020, aocsearch, aocsplit, containers
  main-is:       07_handy_haversacks.hs

executable 08_handheld_halting
  import: bin, flags
  build-depends: base, adventofcode2020, aocsearch, array, containers
  main-is:       08_handheld_halting.hs

executable 09_encoding_error
  import: bin, flags
  build-depends: base, adventofcode2020, array, containers
  main-is:       09_encoding_error.hs

executable 10_adapter_array
  import: bin, flags
  build-depends: base, adventofcode2020, containers
  main-is:       10_adapter_array.hs

executable 11_seating_system
  import: bin, flags
  build-depends: base, adventofcode2020, array, containers
  main-is:       11_seating_system.hs

executable 12_rain_risk
  import: bin, flags
  build-depends: base, adventofcode2020
  main-is:       12_rain_risk.hs

executable 13_shuttle_search
  import: bin, flags
  build-depends: base, adventofcode2020, aocsplit
  main-is:       13_shuttle_search.hs

executable 14_docking_data
  import: bin, flags
  build-depends: base, adventofcode2020, aocsplit, containers
  main-is:       14_docking_data.hs
