name: adventofcode2020
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocmatch
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.BipartiteMatching
  ghc-options:    -Wall
  build-depends:  base, containers

library aocsearch
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  ghc-options:     -Wall
  build-depends:   base, containers

library aocsplit
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  ghc-options:     -Wall
  build-depends:   base

executable 01_report_repair
  build-depends:  base, adventofcode2020, containers
  hs-source-dirs: bin
  main-is:        01_report_repair.hs
  ghc-options:    -Wall

executable 02_password_philosophy
  build-depends:  base, adventofcode2020, aocsplit
  hs-source-dirs: bin
  main-is:        02_password_philosophy.hs
  ghc-options:    -Wall

executable 03_toboggan_trajectory
  build-depends:  base, adventofcode2020, containers
  hs-source-dirs: bin
  main-is:        03_toboggan_trajectory.hs
  ghc-options:    -Wall

executable 04_passport_processing
  build-depends:  base, adventofcode2020, aocsplit, containers
  hs-source-dirs: bin
  main-is:        04_passport_processing.hs
  ghc-options:    -Wall

executable 05_binary_boarding
  build-depends:  base, adventofcode2020
  hs-source-dirs: bin
  main-is:        05_binary_boarding.hs
  ghc-options:    -Wall

executable 06_custom_customs
  build-depends:  base, adventofcode2020, aocsplit
  hs-source-dirs: bin
  main-is:        06_custom_customs.hs
  ghc-options:    -Wall

executable 07_handy_haversacks
  build-depends:  base, adventofcode2020, aocsearch, aocsplit, containers
  hs-source-dirs: bin
  main-is:        07_handy_haversacks.hs
  ghc-options:    -Wall

executable 08_handheld_halting
  build-depends:  base, adventofcode2020, aocsearch, array, containers
  hs-source-dirs: bin
  main-is:        08_handheld_halting.hs
  ghc-options:    -Wall

executable 09_encoding_error
  build-depends:  base, adventofcode2020, array, containers
  hs-source-dirs: bin
  main-is:        09_encoding_error.hs
  ghc-options:    -Wall

executable 10_adapter_array
  build-depends:  base, adventofcode2020, containers
  hs-source-dirs: bin
  main-is:        10_adapter_array.hs
  ghc-options:    -Wall

executable 11_seating_system
  build-depends:  base, adventofcode2020, array, containers
  hs-source-dirs: bin
  main-is:        11_seating_system.hs
  ghc-options:    -Wall

executable 12_rain_risk
  build-depends:  base, adventofcode2020
  hs-source-dirs: bin
  main-is:        12_rain_risk.hs
  ghc-options:    -Wall

executable 13_shuttle_search
  build-depends:  base, adventofcode2020, aocsplit
  hs-source-dirs: bin
  main-is:        13_shuttle_search.hs
  ghc-options:    -Wall

executable 14_docking_data
  build-depends:  base, adventofcode2020, aocsplit, containers
  hs-source-dirs: bin
  main-is:        14_docking_data.hs
  ghc-options:    -Wall

executable 15_rambunctious_recitation
  build-depends:  base, adventofcode2020, aocsplit, array
  hs-source-dirs: bin
  main-is:        15_rambunctious_recitation.hs
  ghc-options:    -Wall
